policies/standard/pod_volume_allowed/constraint.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sPodVolumeAllowedPolicy
metadata:
  name: k8spodvolumeallowedpolicy
spec:
  match:
    kinds:
      - apiGroups: [""]
        kinds: ["Pod", "ReplicationController"]
      - apiGroups: ["apps"]
        kinds: ["Deployment", "StatefulSet", "DaemonSet", "ReplicaSet"]
      - apiGroups: ["batch"]
        kinds: ["Job", "CronJob"]
    excludedNamespaces: []
  parameters:
    allowedVolumes: [
      "emptyDir",
      "secret",
      "persistentVolumeClaim"
    ]
