policies/standard/pod_volume_allowed/template.yaml
apiVersion: templates.gatekeeper.sh/v1beta1
kind: ConstraintTemplate
metadata:
  name: k8spodvolumeallowedpolicy
  annotations:
    description: >-
      Non-core volume types should be disallowed
spec:
  crd:
    spec:
      names:
        kind: K8sPodVolumeAllowedPolicy
      validation:
        openAPIV3Schema:
          type: object
          properties:
            allowedVolumes:
              description: "An allowed-list of volumes"
              type: array
              items: string
  targets:
    - target: admission.k8s.gatekeeper.sh
      rego: |
        package k8spodvolumeallowedpolicy

        violation[{"msg": msg}] {
          o := input_object[_]
          volume_fields := {x | o.spec.volumes[_][x]; x != "name"}
          field := volume_fields[_]
          not input_allowed_volumes(field)
          msg := sprintf("The volume type %v is not allowed, pod: %v.", [field, input.review.object.metadata.name])
        }

        input_allowed_volumes(v) {
          input.parameters.allowedVolumes[_] == v
        }

        input_object[o] {
          input.review.object.kind == "Pod"
          o := input.review.object
        }

        input_object[o] {
          input.review.object.kind == "CronJob"
          o := input.review.object.spec.jobTemplate.spec.template
        }

        input_object[o] {
          o := input.review.object.spec.template
        }
